<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">


    <com.tomer.fadingtextview.FadingTextView
        android:id="@+id/fading_Text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/ubuntu"
        android:includeFontPadding="true"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:texts="@array/data"
        app:timeout="1800" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/text1"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fading_Text_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/ubuntu"
        android:hapticFeedbackEnabled="true"
        android:paddingLeft="40dp"
        android:paddingTop="15dp"
        android:paddingRight="40dp"
        android:paddingBottom="15dp"
        android:text="@string/contact_me"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/ubuntu"
        android:foregroundGravity="center"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingTop="15dp"
        android:paddingRight="32dp"
        android:paddingBottom="15dp"
        android:text="@string/download_cv"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/slogo"
        android:src="@drawable/white_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fb_logo"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/fb_logo"
        android:src="@drawable/fb"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintEnd_toStartOf="@+id/icon_twitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fading_Text_View" />

    <ImageView
        android:id="@+id/icon_twitter"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/icon_twitter"
        android:src="@drawable/twitter"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintEnd_toStartOf="@+id/icon_insta"
        app:layout_constraintStart_toEndOf="@+id/fb_logo"
        app:layout_constraintTop_toBottomOf="@+id/fading_Text_View" />

    <ImageView
        android:id="@+id/icon_linked"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/icon_linked"
        android:src="@drawable/linked"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintEnd_toStartOf="@+id/icon_youtube"
        app:layout_constraintStart_toEndOf="@+id/icon_insta"
        app:layout_constraintTop_toBottomOf="@+id/fading_Text_View" />

    <ImageView
        android:id="@+id/icon_youtube"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/icon_youtube"
        android:src="@drawable/youtube"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintEnd_toStartOf="@+id/icon_git"
        app:layout_constraintStart_toEndOf="@+id/icon_linked"
        app:layout_constraintTop_toBottomOf="@+id/fading_Text_View" />

    <ImageView
        android:id="@+id/icon_git"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/icon_git"
        android:src="@drawable/github"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_youtube"
        app:layout_constraintTop_toBottomOf="@+id/fading_Text_View" />

    <ImageView
        android:id="@+id/icon_insta"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/icon_insta"
        android:src="@drawable/insta"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintEnd_toStartOf="@+id/icon_linked"
        app:layout_constraintStart_toEndOf="@+id/icon_twitter"
        app:layout_constraintTop_toBottomOf="@+id/fading_Text_View" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/grad2"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>
